name: Combinatorrent
category: Network
version: 0.2.0
category: Network
description:   Combinatorrent provides a BitTorrent client, based on the CML library
               for concurrency. This is an early preview release which is capable of
               downloading files from various torrent trackers, but have not yet
               demonstrated to be correct in all aspects.

               It is expected that the package currently contains numerous and even
               grave bugs. Patches to fix any problem are welcome!
cabal-version: >= 1.6

license: BSD3
license-file: LICENSE
copyright: (c) 2009 Jesper Louis Andersen
author: Jesper Louis Andersen
maintainer: jesper.louis.andersen@gmail.com
stability: experimental
synopsis: A concurrent bittorrent client
build-type: Configure

extra-tmp-files: src/Version.hs
extra-source-files: src/Version.hs.in, configure
data-files: AUTHORS, README.md

flag debug
  description: Enable debug support
  default:     False

flag threaded
  description: Use threded runtime
  default:     False

flag threadscope
  description: Enable the eventlog necessary for ThreadScope
  default: False

executable Combinatorrent
  hs-source-dirs: src
  main-is: Combinatorrent.hs
  other-modules: Protocol.BCode, Protocol.Wire,
    Data.Queue,
    Process.ChokeMgr, Process.Console, Process.FS, Process.Listen,
    Process.PeerMgr, Process.Peer, Process.PieceMgr, Process.Status,
    Process.Timer, Process.Tracker,
    Digest, FS, PeerTypes, Process, RateCalc, Control.Concurrent.CML.Strict
    Supervisor, Torrent, Test, TestInstance, DeepSeqInstances, Process.DirWatcher,
    Process.Peer.Sender

  extensions: CPP

  build-depends:
    array >= 0.3,
    base >= 3.0,
    base <= 5.0,
    bytestring,
    cereal,
    cml,
    containers,
    deepseq,
    directory,
    filepath,
    hopenssl,
    hslogger,
    HTTP,
    HUnit,
    mtl,
    network,
    parsec,
    pretty,
    PSQueue,
    QuickCheck >= 2,
    random,
    random-shuffle,
    stm,
    strict-concurrency,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    time

  ghc-prof-options: -auto-all
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -fwarn-unrecognised-pragmas -fwarn-warnings-deprecations -fwarn-deprecated-flags -fwarn-duplicate-exports -fwarn-hi-shadowing -fwarn-incomplete-record-updates -fwarn-missing-fields -fwarn-missing-methods -fwarn-missing-signatures -fno-ignore-asserts -fwarn-wrong-do-bind -fwarn-tabs -fwarn-type-defaults -fwarn-overlapping-patterns -fwarn-unused-matches -fwarn-unused-do-bind
  if !flag(debug)
      cpp-options: "-DNDEBUG"

  if flag(threaded)
      ghc-options: -threaded

  if flag(threadscope)
      ghc-options: -eventlog

source-repository head
  type: git
  location: git://github.com/jlouis/haskell-torrent.git
  branch: master



