name: Combinatorrent
category: Network
version: 0.2.0
category: Network
description:   Combinatorrent provides a BitTorrent client, based on STM
               for concurrency. This is an early preview release which is capable of
               downloading files from various torrent trackers, but have not yet
               demonstrated to be correct in all aspects.

               It is expected that the package currently contains numerous and even
               grave bugs. Patches to fix any problem are welcome!
cabal-version: >= 1.6

license: BSD3
license-file: LICENSE
copyright: (c) 2009 Jesper Louis Andersen
author: Jesper Louis Andersen
maintainer: jesper.louis.andersen@gmail.com
stability: experimental
synopsis: A concurrent bittorrent client
build-type: Configure

extra-tmp-files: src/Version.hs
extra-source-files: src/Version.hs.in, configure
data-files: AUTHORS, README.md

flag debug
  description: Enable debug support
  default:     False

flag threadscope
  description: Enable the eventlog necessary for ThreadScope
  default: False

executable Combinatorrent
  hs-source-dirs: src
  main-is: Combinatorrent.hs
  other-modules: Protocol.BCode, Protocol.Wire,
    Data.Queue, Data.PieceSet, Data.PendingSet
    Process.ChokeMgr, Process.Console, Process.FS, Process.Listen,
    Process.PeerMgr, Process.Peer, Process.PieceMgr, Process.Status,
    Process.Timer, Process.Tracker, Process.TorrentManager
    Digest, FS, Channels, Process, RateCalc,
    Supervisor, Torrent, Test, TestInstance, Process.DirWatcher,
    Tracer,
    Process.Peer.Sender,
    Process.Peer.SenderQ,
    Process.Peer.Receiver

  extensions: CPP

  build-depends:
    array >= 0.3,
    base >= 3.0,
    base <= 5.0,
    bytestring,
    cereal,
    containers,
    directory,
    filepath,
    hopenssl,
    hslogger,
    HTTP,
    HUnit,
    mtl,
    network,
    parsec,
    pretty,
    PSQueue,
    QuickCheck >= 2,
    random,
    random-shuffle,
    stm,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    time

  ghc-prof-options: -auto-all -ignore-scc -caf-all
  ghc-options: -Wall -fno-warn-orphans -threaded
  if !flag(debug)
      cpp-options: "-DNDEBUG"

  if flag(threadscope)
      ghc-options: -eventlog

source-repository head
  type: git
  location: git://github.com/jlouis/combinatorrent.git
  branch: master



