name: HaskellTorrent
version: 0.0
cabal-version: >= 1.2

license: BSD3
license-file: LICENSE
copyright: (c) 2009 Jesper Louis Andersen
author: Jesper Louis Andersen
maintainer: jesper.louis.andersen@gmail.com
stability: experimental
synopsis: A Haskell Bittorrent client
build-type: Simple

executable HaskellTorrent
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base >= 3.0,
    base <= 5.0,
    pretty,
    parsec,
    containers,
    bytestring,
    SHA,
    random,
    network,
    cml,
    HTTP,
    time

source-repository head
  type: git
  location: git://github.com/jlouis/haskell-torrent.git
  branch: master



