name: HaskellTorrent
version: 0.0
cabal-version: >= 1.2

license: BSD3
license-file: LICENSE
copyright: (c) 2009 Jesper Louis Andersen
author: Jesper Louis Andersen
maintainer: jesper.louis.andersen@gmail.com
stability: experimental
synopsis: A Haskell Bittorrent client
build-type: Simple
extra-tmp-files: src/Version.hs

flag debug
  description: Enable debug support
  default:     False

executable HaskellTorrent
  hs-source-dirs: src
  main-is: Main.hs
  extensions: CPP

  build-depends:
    base >= 3.0,
    base <= 5.0,
    mtl,
    cereal,
    pretty,
    parsec,
    containers,
    bytestring,
    SHA,
    random,
    network,
    cml,
    HTTP,
    time

  if flag(debug)
      cpp-options: "-DDEBUG"
  else
      cpp-options: "-NDEBUG"

source-repository head
  type: git
  location: git://github.com/jlouis/haskell-torrent.git
  branch: master



