name: HaskellTorrent
description: A Haskell Bittorrent client
category: Network
version: 0.0
category: Network
description: A bittorrent client
cabal-version: >= 1.6

license: BSD3
license-file: LICENSE
copyright: (c) 2009 Jesper Louis Andersen
author: Jesper Louis Andersen
maintainer: jesper.louis.andersen@gmail.com
stability: experimental
synopsis: A Haskell Bittorrent client
build-type: Configure

extra-tmp-files: src/Version.hs
extra-source-files: src/Version.hs.in, configure
data-files: AUTHORS, README.md

flag debug
  description: Enable debug support
  default:     False

executable HaskellTorrent
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Protocol.BCode, ChokeMgrP, ConsoleP, Digest, FS, FSP, ListenP, Logging,
    LoggingTypes, PeerMgrP, PeerP, PeerTypes, PieceMgrP, Process, Queue, RateCalc,
    StatusP, Supervisor, TimerP, Torrent, TrackerP, Protocol.Wire
  extensions: CPP

  build-depends:
    base >= 3.0,
    base <= 5.0,
    mtl,
    cereal,
    pretty,
    parsec,
    containers,
    bytestring,
    random,
    network,
    cml,
    HTTP,
    HsOpenSSL,
    time,
    random-shuffle,
    directory

  ghc-options: -threaded -fwarn-unused-imports
  if flag(debug)
      cpp-options: "-DDEBUG"
  else
      cpp-options: "-DNDEBUG"

source-repository head
  type: git
  location: git://github.com/jlouis/haskell-torrent.git
  branch: master



